--- a/views/assets/pugs/login.pug
+++ b/views/assets/pugs/login.pug
@@ -5,12 +5,11 @@ block body
         form(id='username_password_input', action='/' method='post')
             .current_user
                 h2 Username
-                input(type='text', name='username', value='', pattern='^(?=.*[a-zA-Z])(?=.*[a-z]).{6,15}$', required='', autofocus='')
+                input(type='text', name='username', value='', pattern='(?=.*[a-zA-Z])(?=.*[a-z]).{6,15}', required='', autofocus='')
                 h2 Password
-                input(type='password', name='password', pattern='(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,20}', title='Minimum 1 capital letter, one lower case letter and one number are required and password should have between 8 and 20 characters', required autocomplete='off')
+                input(type='password', name='password', pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).{8,}", oninvalid='setCustomValidity("Lozinka mora sadrzavati najmanje 1 broj, 1 veliko i 1 malo slovo i imati 8 znakova")', required="")
             .submit_new_user
-                input(type='submit', name='submit_user', value='Potvrdi', form='username_password_input')
-                input(type='submit', value='Unesi novog korisnika')
+                input(type='submit', name='submit_user', value='Prijavi se', form='username_password_input')
             .user_not_found
                 body
 
