--- a/views/assets/pugs/input_new_multiple_values.pug
+++ b/views/assets/pugs/input_new_multiple_values.pug
@@ -2,4 +2,4 @@ extends input_new_value.pug
 
 block content
     div
-        input(type='submit', value='Pohrani prosjek unesenih mjerenja')
+        input(type='submit', value='Pohrani uneseno mjerenje' autofocus="upperValue")
