Controll logic of whole app updated
Get back button added.
Default time period to show inputs added. there is a default value shown now for last day of time period and the first day is 7 days ago.
css updated. Graphical UI enhanced.
req.app.locals.collection updated properly, so that all routs call it on right place.
Code optimized in some routes so it has less lines of code.

--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -56,6 +56,7 @@ input[type=text] {
 input[type=number] {
   border-radius: 10px;
   padding: 4px 5px;
+  width: 150px;
 }
 input[type=date] {
   border-radius: 10px;
@@ -70,4 +71,9 @@ input[type=date] {
   padding: 4px 5px;
   margin: auto;
   width: 100%;
+ }
+ .get_back {
+   background-image:  linear-gradient(rgba(229, 57, 53, 0.4), rgba(106, 27, 154, 0.4));
+   border-bottom-left-radius: 20px;
+   border-bottom-right-radius: 20px;
  }
