--- a/views/assets/pugs/output_with_table.pug
+++ b/views/assets/pugs/output_with_table.pug
@@ -8,3 +8,4 @@ block body
             block graphics
         .table_container
             include table_last_few_inputs.pug
+    include get_back.pug
