--- a/views/assets/css/table.css
+++ b/views/assets/css/table.css
@@ -8,7 +8,7 @@
 }
 .average_values {
     text-align: center;
-    border: 1px solid black;
+    border: 1px solid rgb(181, 30, 113);
     background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
     box-shadow: 5px 5px 3px;
     border-radius: 20px;
@@ -16,7 +16,7 @@
 .table_container {
     display: table;
     padding-top: 0;
-    border: 1px solid black;
+    border: 1px solid rgb(181, 30, 113);
     background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
     box-shadow: 5px 5px 3px;
     border-radius: 20px;
@@ -25,7 +25,7 @@
     text-align: center;
     color: rgb(233, 216, 216);
     font: 50%;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgb(181, 30, 113);
     padding: 5px 0;
 }
 table, th, td {
@@ -41,5 +41,5 @@ table {
     width: 100%
 }
 th, td {
-    border: 2px solid black;
+    border: 2px solid rgb(181, 30, 113);
 }
