--- a/views/assets/css/values.css
+++ b/views/assets/css/values.css
@@ -69,7 +69,8 @@ input {
 }
 .formFormat {
   padding: 10px 0px;
-  border-top: 2px solid black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 .formFormat > div {
   display: flex;
