--- a/views/assets/pugs/period_of_interest.pug
+++ b/views/assets/pugs/period_of_interest.pug
@@ -3,7 +3,8 @@ extends ../../index.pug
 block body
     .input-field
         form(action='/average')
-            input(type='date', name='period_begin', placeholder='', required='', autofocus='')
-            input(type='date', name='period_end', placeholder='', required='')
+            input(type='date', name='period_begin', placeholder='', value=today, required='', autofocus='')
+            input(type='date', name='period_end', placeholder='', value=week_before required='')
             input(type='text', name='number_to_show', placeholder='Unesite broj 1-10')
             input(type='submit', value='Potvrdi unos')
+        include get_back.pug
