login and input values logic updated
Login fully functional. By every login will new JSON token generated and via cookie sent on client in order to authenticate him for further use.
Single and multiple values input logic updated using in Users module embedded inputSchema, so that each user represents one document in the database and that his values always get updated as a separate array of input values.
Inserting values from external file also adopted for embedded models use.

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ html(lang='en')
     nav(class=nav_class_input)
       div.options-to-choose
         //open form to input single value; call extend_new_measurings
-        a(href='/input_new_value') Unesi novo mjerenje
+        a(href='/input_values') Unesi novo mjerenje
         //open form to input multiple values and save an average of them in the database; call extend_multiple_new_measurings
         a(href='/input_multiple_values') Unesi niz novih mjerenja
         //call /select_file to import data from outer text file
