--- a/views/assets/pugs/average_values.pug
+++ b/views/assets/pugs/average_values.pug
@@ -1,4 +1,5 @@
 extends output_with_table.pug
 
 block average
-    h2 Prosjecne vrijednosti tlaka u periodu od #{begin} do #{end}:
+    .average_title
+        h2 Prosjecne vrijednosti tlaka u periodu od #{begin} do #{end}:
