--- a/views/assets/pugs/get_back.pug
+++ b/views/assets/pugs/get_back.pug
@@ -1,3 +1,3 @@
 .get_back
-    form.get_back(action="/welcome")
+    form(action="/welcome")
         input(type='submit' value='Povratak na pocetnu stranicu')
