--- a/views/assets/css/table.css
+++ b/views/assets/css/table.css
@@ -5,27 +5,29 @@
     top: 5%;
     width: 30%;
     margin: auto;
+    border: 1px solid black;
+    box-shadow: 5px 5px 3px;
+    border-radius: 20px;
 }
 .average_values {
     text-align: center;
-    border: 1px solid rgb(181, 30, 113);
+    border-bottom: 1px solid black;
     background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
-    box-shadow: 5px 5px 3px;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 .table_container {
     display: table;
     padding-top: 0;
-    border: 1px solid rgb(181, 30, 113);
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
     background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
-    box-shadow: 5px 5px 3px;
-    border-radius: 20px;
 }
 .last_ten_values_render {
     text-align: center;
     color: rgb(233, 216, 216);
     font: 50%;
-    border-bottom: 2px solid rgb(181, 30, 113);
+    border-bottom: 2px solid rgb(40, 7, 73);
     padding: 5px 0;
 }
 table, th, td {
@@ -41,5 +43,5 @@ table {
     width: 100%
 }
 th, td {
-    border: 2px solid rgb(181, 30, 113);
+    border: 2px solid  rgb(40, 7, 73);
 }
