--- a/views/assets/pugs/graphics.pug
+++ b/views/assets/pugs/graphics.pug
@@ -19,9 +19,9 @@ block graphics
         new Chart('chart', {
             type: 'line',
             data: {
-                labels: {#labels},
+                labels: #{labels},
                 datasets: [{
-                data: {#data},
+                data: #{data},
                 fill: false,
                 borderColor: '#af90ca',
                 backgroundColor: '#af90ca',
