--- a/views/assets/pugs/graphics.pug
+++ b/views/assets/pugs/graphics.pug
@@ -22,6 +22,7 @@ block graphics
                 labels: JSON.parse('!{labels}'),
                 datasets: [{
                 data: JSON.parse('!{data}'),
+                data:  JSON.parse('!{data1}'),
                 fill: false,
                 borderColor: '#af90ca',
                 backgroundColor: '#af90ca',
