Responsivness on all buttons on welcome page added
Period of interest possible to choose in both average and graphics route.
If no input came from database message will be shown than there are no data to output. Message styled input in the output box.

--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -77,4 +77,5 @@ input[type=date] {
    background-image:  linear-gradient(rgba(229, 57, 53, 0.4), rgba(106, 27, 154, 0.4));
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
+   border-top: 1px solid black;
  }
