--- a/views/assets/pugs/output_with_table.pug
+++ b/views/assets/pugs/output_with_table.pug
@@ -6,6 +6,6 @@ block body
             block average
         .graphics
             block graphics
-        .table_container
-            include table_last_few_inputs.pug
+        .no_output
+            block no_output
         include get_back.pug
