--- a/views/index.pug
+++ b/views/index.pug
@@ -24,7 +24,7 @@ html(lang='en')
     nav(class=nav_class_show)
       div.options-to-choose
         //call period_of_interest web page layout to input period for which user wants to see input values
-        a(href='/period_of_interest') Prosjecne vrijednosti
+        a(href='/time_period_average') Prosjek i prikaz mjerenja
         //call last_inputs web page layout to show graphically inputs
-        a(href='/last_inputs') Graficki prikaz zadnjih mjerenja
+        a(href='/time_period_graphics') Graficki prikaz mjerenja
     block body
