--- a/views/assets/css/table.css
+++ b/views/assets/css/table.css
@@ -19,7 +19,6 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     background-color: white;
-    border: 1px solid black;
 }
 .table_container {
     display: table;
@@ -27,12 +26,22 @@
     border-bottom: 1px solid black;
     background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
 }
+.no_output {
+    text-align: center;
+    background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
 .last_ten_values_render {
     text-align: center;
     color: rgb(233, 216, 216);
     font: 50%;
+    border-bottom: 1px solid rgb(40, 7, 73);
+}
+.last_ten_values_render > h2 {
+    padding: 10px 0px 5px 0px;
     border-bottom: 2px solid rgb(40, 7, 73);
-    padding: 5px 0;
+    border-top: 2px solid rgb(40, 7, 73);
 }
 table, th, td {
     color: rgb(233, 216, 216);
