--- a/views/assets/pugs/graphics.pug
+++ b/views/assets/pugs/graphics.pug
@@ -4,36 +4,24 @@ block graphics
     canvas#chart
     script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js' type='text/javascript')
     script.
-        //- -const ctx = document.getElementById('chart').getContext('2d');
-        //-     -const myChart = new Chart(ctx, {
-        //-         -type: 'line',
-        //-         -data: {
-        //-             -labels: labels,
-        //-             -datasets: [{
-        //-                 -label: 'Mjerenje tlaka',
-        //-                 -data: data
-        //-             }]
-        //-         }[12, 15, 14, 16, 18]
-        //-     });['1980', '1990', '2000', '2010', '2020']
-        
         new Chart('chart', {
             type: 'line',
             data: {
-                labels: JSON.parse('!{labels}'),
+                labels: JSON.parse('!{time}'),
                 datasets:
                     [{
-                        data: JSON.parse('!{data}'),
+                        data: JSON.parse('!{upperValues}'),
                         fill: false,
-                        borderColor: '#af90ca',
-                        backgroundColor: '#af90ca',
-                        label: 'Mjerenja tlaka'
+                        borderColor: '#FA3107',
+                        backgroundColor: '#FA3107',
+                        label: 'Gornji tlak'
                     },
                     {
-                        data:  JSON.parse('!{data1}'),
+                        data:  JSON.parse('!{lowerValues}'),
                         fill: false,
-                        borderColor: '#af90ca',
-                        backgroundColor: '#af90ca',
-                        label: 'Mjerenja tlaka'
+                        borderColor: '#0733FA',
+                        backgroundColor: '#0733FA',
+                        label: 'Donji tlak'
                     }],
             },
             options: {
