--- a/views/assets/css/select_file.css
+++ b/views/assets/css/select_file.css
@@ -5,7 +5,7 @@
     box-shadow: 5px 5px 3px;
     border-radius: 20px;
     position: relative;
-    top: 5%;
+    top: 170px;
     width: 17%;
     margin: auto;
     padding-top: 7px;
