--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -6,8 +6,8 @@
 @import "./colors.css";
 @import "./navigation_bar.css";
 @import "./values.css";
-@import "./table.css";
-@import "./input_frame.css";
+@import "./average.css";
+@import "./select_file.css";
 @import "./login.css";
 @import "./chart.css";
 
