--- a/views/assets/pugs/login.pug
+++ b/views/assets/pugs/login.pug
@@ -1,6 +1,6 @@
 extends ../../index.pug
 
-block body
+block login
     .login_form
         form(id='username_password_input' method='post')
             .current_user
