--- a/views/index.pug
+++ b/views/index.pug
@@ -12,19 +12,8 @@ html(lang='en')
       figure.logo
         img(src='https://www.welchallyn.com/content/dam/welchallyn/images/Product-Images/Cardiopulmonary/Ambulatory-Blood-Pressure-Monitor/ABPM%207100/PWA_icon.png', alt='Heart-rate_logo')
       h1.main-title-text Dijagram mjerenja tlaka
+    //login
+    block login
     // navigation toolbar
-    nav(class=nav_class_input)
-      div.options-to-choose
-        //open form to input single value; call extend_new_measurings
-        a(href='/input_values') Unesi novo mjerenje
-        //open form to input multiple values and save an average of them in the database; call extend_multiple_new_measurings
-        a(href='/input_multiple_values') Unesi niz novih mjerenja
-        //call /select_file to import data from outer text file
-        a(href='/select_file') Unesi iz vanjske datoteke
-    nav(class=nav_class_show)
-      div.options-to-choose
-        //call period_of_interest web page layout to input period for which user wants to see input values
-        a(href='/time_period_average') Prosjek i prikaz mjerenja
-        //call last_inputs web page layout to show graphically inputs
-        a(href='/time_period_graphics') Graficki prikaz mjerenja
     block body
+    
